--- a/public_html/assets/css/cakrawala.css
+++ b/public_html/assets/css/cakrawala.css
@@ -142,8 +142,8 @@ body {
 .kompetisi-debat {
   background-image: url('../images/cakrawala/paper.jpg');
   background-size: cover;
-  color: #333
-    position: relative;
+  color: #333;
+  position: relative;
 }
 .kompetisi-debat .mic {
   position: absolute;
@@ -413,6 +413,53 @@ body {
 }
 .accordion-v .panel-v .panel-content .scroll {
   max-height: 235px;
+}
+.section.thecolorrun {
+  background-image: url('../images/cakrawala/pattern.jpg');
+  color: #fff;
+  position: relative;
+}
+.section.thecolorrun .info-box h2 {
+  background-image: url('../images/cakrawala/thecolorrun.png');
+  text-indent: -9999px;
+  height: 120px;
+  background-repeat: no-repeat;
+  width: 800px;
+  margin: 60px auto 0;
+}
+.section.thecolorrun .info-tcr .panel {
+  width: 800px;
+  margin: auto;
+  border: none;
+  border-radius: 0;
+  color: #fff;
+  background-color: #333;
+}
+.section.thecolorrun .info-tcr .panel.pink .panel-heading {
+  background-color: #f9008d;
+}
+.section.thecolorrun .info-tcr .panel.yellow .panel-heading {
+  background-color: #fff000;
+}
+.section.thecolorrun .info-tcr .panel.blue .panel-heading {
+  background-color: #05a9ff;
+}
+.section.thecolorrun .info-tcr .panel .panel-heading {
+  border-radius: 0;
+  padding: 15px;
+}
+.section.thecolorrun .info-tcr .panel .panel-heading .panel-title {
+  font-weight: bold;
+  color: #000;
+}
+.section.thecolorrun .info-tcr .panel .panel-body {
+  border-top-color: #fff !important;
+}
+.section.thecolorrun .info-tcr .panel .panel-body .scroll {
+  max-height: 200px;
+}
+.section.thecolorrun .info-tcr .panel + .panel {
+  margin-top: 0;
 }
 footer {
   position: absolute;
