--- a/public_html/assets/css/main.less
+++ b/public_html/assets/css/main.less
@@ -132,11 +132,20 @@ legend, .alert {
     }
 
     &.pelatihan {
-        background: @pwti center;   
+        background: @pwti center;
     }
 
     &.keanggotaan {
-        background: url('../images/keanggotaan-banner.jpg') @grey center;    
+        background: url('../images/keanggotaan-banner.jpg') @grey center;
+    }
+
+    &.lkmm {
+        background: url('../images/lkmm-banner.jpg') @grey center;
+        color: @grey;
+
+        span {
+            font-weight: bold;
+        }
     }
 
     .container {
